# jmty-watcher

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml  watcher.yml
debug_cache/: article-1j3kzx.html  article-1oh88t.html  article-p400e.html  listing.html
docs/: google_sheets_setup.md
handler/: requirements.txt  vercel.json
handler/api/: slack_interactive.py
scripts/: apps_script.gs  estimate_cost.py  preview_slack.py  probe_closed_article.py  validate_sql.py
sql/: schema.sql
tests/: test_anthropic_utils.py  test_backfill_dm.py  test_backfill_sheets.py  test_bulk_backfill.py  test_bulk_backfill_loop.py  test_classifier_parse.py  test_config.py  test_count_jmty.py  test_dm_generator.py  test_models.py  test_process_listing.py  test_scraper.py  test_sheets_notifier.py  test_slack_blocks.py
tests/fixtures/: detail_sample.html  listing_sample.html
watcher/: __init__.py  anthropic_utils.py  backfill_dm.py  backfill_sheets.py  bulk_backfill.py  classifier.py  config.py  count_jmty.py  db.py  debug_scrape.py  dm_generator.py  main.py  models.py  offline_demo.py  scraper.py  sheets_notifier.py  slack_notifier.py
watcher/prompts/: classifier.txt  dm_generator.txt
