[project]
name = "second-hand-watcher"
version = "0.1.0"
description = "Jimoty trailer house watcher bot (PoC)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "anthropic>=0.40.0",
    "supabase>=2.8.0",
    "slack-sdk>=3.33.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["watcher"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "sqlparse>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["E741"]  # `l` を listing の意味で使うため許容

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
